--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "workspaces": {
     "packages": [
       "packages/*",
+      "apps/admin_v2/code",
       "apps/admin/code",
       "apps/website/code",
       "apps/theme",
@@ -209,7 +210,7 @@
   },
   "resolutions": {
     "@rmwc/textfield": "link:./packages/ui/rmwc/textfield",
-    "@types/react": "16.14.2",
+    "@types/react": "16.14.20",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "pretty-format": "25.5.0",
