wip: admin app v2

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -16,9 +16,7 @@
     "baseUrl": ".",
     "paths": {},
     "typeRoots": ["./typings", "./node_modules/@types", "@types/testing-library__cypress"],
-    "plugins": [{ "transform": "typescript-transform-paths", "afterDeclarations": true }],
-    "noUnusedParameters": true,
-    "noUnusedLocals": true
+    "plugins": [{ "transform": "typescript-transform-paths", "afterDeclarations": true }]
   },
   "exclude": [
     "node_modules",
