--- a/apps/admin_v2/code/package.json
+++ b/apps/admin_v2/code/package.json
@@ -36,7 +36,7 @@
     "apollo-cache": "^1.3.5",
     "apollo-client": "^2.2.8",
     "apollo-link": "^1.2.14",
-    "apollo-link-batch-http": "^1.2.14",
+    "apollo-link-batch-http": "^1.2.14", 
     "apollo-utilities": "^1.3.4",
     "core-js": "^3.0.1",
     "cross-fetch": "^3.0.4",
@@ -53,8 +53,7 @@
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
-    "start": "cross-env PORT=3001 yarn webiny run start",
-    "watch": "cross-env PORT=3001 yarn webiny run start",
+    "watch": "cross-env PORT=3001 yarn webiny run watch",
     "build": "yarn webiny run build"
   },
   "browserslist": {
