--- a/packages/api-headless-cms-ddb-es/package.json
+++ b/packages/api-headless-cms-ddb-es/package.json
@@ -34,6 +34,7 @@
     "@webiny/utils": "^5.18.1",
     "dataloader": "^2.0.0",
     "dynamodb-toolbox": "^0.3.4",
+    "elastic-ts": "^0.8.0",
     "jsonpack": "^1.1.5",
     "lodash.chunk": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
