--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -12,8 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-router-v6": "npm:react-router-dom@6.0.0"
+    "react-dom": "^16.14.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
